Add GENCODE link to homepage

--- a/covid19/htdocs/index.html
+++ b/covid19/htdocs/index.html
@@ -148,25 +148,36 @@
     <table>
       <tr>
         <td>
-            <img src='/i/icon_blog.svg' height="35px" style="margin-right:15px">
         </td>
 
         <td>
-            <div style="padding-bottom:20px;padding-top:10px;"><a href='http://www.ensembl.info/2020/05/19/ensembl-launches-covid-19-resource/'>Read the latest updates on the Ensembl blog</a></div>
-            <div style="margin-bottom:50px">If you would like to get in touch regarding this site or how to integrate the tools in your work, please <a href="mailto:helpdesk@ensembl.org">write to us</a>.</div>
+            <!-- <div style="padding-bottom:20px;padding-top:10px;"><a href='http://www.ensembl.info/2020/05/19/ensembl-launches-covid-19-resource/'>Read the latest updates on the Ensembl blog</a></div> -->
+            <div style="margin-bottom:40px">The Ensembl/GENCODE human protein-coding gene set linked to COVID-19 can be found at <a href="https://www.gencodegenes.org/human/covid19.html">Human Covid-19 Gene Annotation</a>.</div>
+        </td>
+      </tr>
+
+       <tr>
+        <td colspan=2>
+            <img src='/i/CV19DP_logo.svg' height="30px">
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>
+          <div style="margin-bottom:30px">
+            More data on SARS-CoV-2 can be found on the <a href='https://www.covid19dataportal.org/'>European COVID-19 Data Portal</a>, which brings together relevant datasets submitted to EMBL-EBI and other major centres for biomedical information.
+          </div>
         </td>
       </tr>
 
       <tr>
-        <td colspan=2>
-            <img src='/i/CV19DP_logo.svg' height="30px">
-        </td>
-      </tr><tr>
-        <td></td>
         <td>
-          <div>
-            More data on SARS-CoV-2 can be found on the <a href='https://www.covid19dataportal.org/'>European COVID-19 Data Portal</a>, which brings together relevant datasets submitted to EMBL-EBI and other major centres for biomedical information.
-          </div>
+            <img src='/i/icon_blog.svg' height="35px" style="margin-right:10px">
+        </td>
+
+        <td>
+            <div style="padding-bottom:20px;padding-top:10px;"><a href='http://www.ensembl.info/2020/05/19/ensembl-launches-covid-19-resource/'>Read the latest updates on the Ensembl blog</a></div>
+            <div>If you would like to get in touch regarding this site or how to integrate the tools in your work, please <a href="mailto:helpdesk@ensembl.org">write to us</a>.</div>
         </td>
       </tr>
     </table>
